Add serverless support

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,7 +31,7 @@ html
             div As easy as...
             div
               code.wrap-always(style="font-size:14px;")
-                a(href=data.host + '/chart/column?data=5,1,2,9,8,3,6')= data.host + '/chart/column?data=5,1,2,9,8,3,6'
+                a(href=data.api_host + '/chart/column?data=5,1,2,9,8,3,6')= data.api_host + '/chart/column?data=5,1,2,9,8,3,6'
 
       hr
 
