Add single quote

--- a/views/index.pug
+++ b/views/index.pug
@@ -56,7 +56,7 @@ html
             code= '$ curl -X GET ' + data.api_host + '/chart/:type[?parameter1=val1&parameter2=val2&...]'
           div or
           div
-            code= '$ curl -X POST ' + data.api_host + '/chart/:type -d {"parameter1": "val1", "parameter2": "val2", ...}'
+            code= '$ curl -X POST ' + data.api_host + '/chart/:type -d \'{"parameter1": "val1", "parameter2": "val2", ...}\''
         div.margin-vert-large.text-center
           strong
             a(href="https://github.com/whatl3y/restcharts").
