Import CSS directly into view template

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,8 +9,10 @@ html
     script(src="https://use.fontawesome.com/028467eb54.js")
 
     link(rel="stylesheet",href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css")
-    link(href="/public/css/app.css",rel="stylesheet")
-
+      
+    style
+      include ../public/css/app.css
+      
     title REST Charts
   body
     div.container.small-width
